--- a/Makefile.am
+++ b/Makefile.am
@@ -7,3 +7,7 @@ netpp_SOURCES  = src/ping_pong.c
 netpp_SOURCES += src/log.c include/log.h
 netpp_SOURCES += src/network.c include/network.h
 netpp_CPPFLAGS = $(AM_CPPFLAGS) -DBIN_NAME=\"netpp\"
+
+TESTS = tests/netpp
+
+dist_check_SCRIPTS = tests/netpp
