Rename test script to avoid autokill issue

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,6 @@ netpp_SOURCES += src/log.c include/log.h
 netpp_SOURCES += src/network.c include/network.h
 netpp_CPPFLAGS = $(AM_CPPFLAGS) -DBIN_NAME=\"netpp\"
 
-TESTS = tests/netpp
+TESTS = tests/netpp.sh
 
-dist_check_SCRIPTS = tests/netpp
+dist_check_SCRIPTS = tests/netpp.sh
